--- a/website/nineNews/nineNews.css
+++ b/website/nineNews/nineNews.css
@@ -50,13 +50,16 @@
 }
 
 .title-news h2{
+    font-size: 1em;
     font-weight: 700;
-    font-size: .875rem;
+    line-height: 1.2;
 }
 
 .excerpt-news p{
-    font-size: .875rem;
+    font-size: 1rem;
     margin-bottom: 0px;
+    font-weight: 400;
+    line-height: 1.4;
 }
 .news a{
     text-decoration: none;
