--- a/website/oneNew/oneNew.css
+++ b/website/oneNew/oneNew.css
@@ -1,9 +1,12 @@
 /* Naujiena */
 .title-news h1{
-    margin-top: 2rem;
-    margin-bottom: 0rem;
-    font-weight: 300;
     text-align: left;
+    font-weight: 400;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+    margin: 45px 0 10px;
+
 }
 
 .data-news-source{
@@ -11,6 +14,11 @@
     /* gap: 700px; */
     margin-bottom: 1rem;
     justify-content: space-between;
+}
+
+.data-news-source p, time{
+    font-size: 1em;
+    font-weight: 300;
 }
 
 .img-news{
