--- a/website/sponsors/sponsors.css
+++ b/website/sponsors/sponsors.css
@@ -2,6 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 400;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: .2em;
     margin: 40px 0px 20px 0px;
 }
 
