--- a/website/team/team.css
+++ b/website/team/team.css
@@ -2,9 +2,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 35px 0px 10px 0px;
+    font-weight: 400;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+    margin: 45px 0 10px;
+
 }
 
+.img-team {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 45px;
+}
+
+.image-team {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover; 
+}
+ 
 .team{
     display: flex;
     flex-wrap: wrap;
@@ -47,7 +65,6 @@
 }
 
 .about{
-    /* background-color: pink; */
     height: 50%;
     display: flex;
     justify-content: center;
