--- a/website/about/about.css
+++ b/website/about/about.css
@@ -1,3 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
+.container-fluid{
+    background-color: #ddede4;
+}
 .title-history, .title-team-achievements{
     display: flex;
     justify-content: center;
@@ -6,7 +19,7 @@
     font-size: 2em;
     text-transform: uppercase;
     letter-spacing: .2em;
-    margin: 45px 0 10px;
+    padding: 45px 0 10px;
 
 }
 
@@ -14,4 +27,8 @@
     font-size: 1em;
     font-weight: 400;
     line-height: 1.6;
+}
+
+.text-team-achievements p{
+    margin-bottom: 0px;
 }
