--- a/website/headerfooter.css
+++ b/website/headerfooter.css
@@ -1,14 +1,24 @@
 /* Header */
 .container-fluid.header{
-    background-color: #333;
+    background-color: #4b6858;
+    height: 90px;
 }
+
+.main-logo{
+    z-index: 1;
+}
+
+.main-logo img{
+    height: 120px;
+}
+
 
 .navbar {
     display: flex;
     position: relative;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #4b6858;
     color: white;
 }
 
@@ -31,14 +41,14 @@
 .navbar-links li a {
     display: block;
     text-decoration: none;
-    color: white;
+    color: #ddede4;
     font-size: 1em;
     font-weight: 400;
     padding: 16px;
 }
 
-.navbar-links li:hover {
-    background-color: #555;
+.navbar-links li a:hover {
+    color: #a3a2a2;
 }
 
 .toggle-button {
@@ -65,7 +75,7 @@
 /* ---- */
 
 /* Headeris mobile */
-@media (max-width: 800px) {
+@media (max-width: 767px) {
     .navbar {
         /* flex-direction: column; */
         align-items: flex-start;
@@ -96,6 +106,7 @@
         border-color: green;
         border-right-style: none;
         border-left-style: none;
+        color: #ddede4;
     }
 
     .navbar-links.active {
@@ -107,19 +118,21 @@
 
 /* Footeris */
 
-
+.container-fluid.footer{
+    background-color: #4b6858;
+}
 
 .footer {
     display: flex;
-    height: 120px;
-    background: aqua;
+    height: 140px;
+    background-color: #4b6858;
     bottom: 0;
 }
 
 .footer-title {
     height: 100%;
     width: 35%;
-    background: aqua;
+    background-color: #4b6858;
 }
 
 .footer-title{
@@ -127,15 +140,12 @@
 }
 
 .footer-logo{
-    width: 50px;
-    height: 100px;
     display: flex;
 }
 
 .footer-title img{
     margin: 10px 0px;
-    width: 50px;
-    height: 100%;    
+    height: 120px;    
 
 }
 
@@ -149,6 +159,7 @@
     margin: 0px 0px 0px 15px;
     font-size: 1em;
     font-weight: 400;
+    color: #ddede4;
 }
 
 
@@ -156,7 +167,7 @@
 .footer-info {
     height: 100%;
     width: 35%;
-    background: aqua;
+    background-color: #4b6858;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -167,12 +178,13 @@
     margin: 0;
     font-size: 1em;
     font-weight: 400;
+    color: #ddede4;
 }
 
 .footer-socials {
     height: 100%;
     width: 30%;
-    background: aqua;
+    background-color: #4b6858;
     display: flex;
     justify-content: center;
     align-items: center;
