--- a/website/oneNew/oneNew.css
+++ b/website/oneNew/oneNew.css
@@ -1,3 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
+.container-fluid {
+    background-color: #ddede4;
+}
+
 /* Naujiena */
 .title-news h1{
     text-align: left;
@@ -5,7 +19,7 @@
     font-size: 2em;
     text-transform: uppercase;
     letter-spacing: .2em;
-    margin: 45px 0 10px;
+    padding: 45px 0 10px;
 
 }
 
@@ -32,7 +46,7 @@
 }
 
 .photo-author{
-    background-color: pink;
+    background-color: #ddede4;
     text-align: end;
 }
 
@@ -41,5 +55,9 @@
     font-weight: 400;
     line-height: 1.6;
     margin-bottom: 20px;
+}
+
+.text-news p:last-child{
+    margin-bottom: 0px;
 }
 /* ---- */
