--- a/website/sponsors/sponsors.css
+++ b/website/sponsors/sponsors.css
@@ -1,3 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
+.container-fluid {
+    background-color: #ddede4;
+}
+
 .sponsors-title{
     display: flex;
     justify-content: center;
@@ -6,7 +20,7 @@
     font-size: 2em;
     text-transform: uppercase;
     letter-spacing: .2em;
-    margin: 40px 0px 20px 0px;
+    padding: 40px 0px 20px 0px;
 }
 
 .sponsors-all a{
