--- a/website/team/team.css
+++ b/website/team/team.css
@@ -1,3 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.container-fluid{
+    background-color: #ddede4;
+}
+
 .team-title{
     display: flex;
     justify-content: center;
@@ -6,7 +19,7 @@
     font-size: 2em;
     text-transform: uppercase;
     letter-spacing: .2em;
-    margin: 45px 0 10px;
+    padding: 45px 0 10px;
 
 }
 
@@ -14,7 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 45px;
+    padding-bottom: 45px;
 }
 
 .image-team {
@@ -26,14 +39,13 @@
 .team{
     display: flex;
     flex-wrap: wrap;
-    background-color: blue;
-    /* gap: 2px; */
+    background-color: #ddede4;
 }
 
 .player{
     display: flex;
     width: 100%;
-    background-color: aqua;
+    background-color: #ddede4;
     padding: 0px 15px 15px 0px;
 }
 
