--- a/website/contacts/contacts.css
+++ b/website/contacts/contacts.css
@@ -9,9 +9,9 @@ body {
 
 
 /* Footeris */
-.footer {
+/* .footer {
   position: fixed;
-}  
+}   */
 /* ---- */
 
 .container-fluid{
@@ -20,7 +20,7 @@ body {
 
   /* Info ir žemėlapis  */
   .contacts {
-    padding: 50px 0px 50px 0px;
+    padding: 50px 0px 350px 0px;
     display: flex;
     align-items: center;
     justify-content: space-between;
