--- a/website/headerfooter.css
+++ b/website/headerfooter.css
@@ -44,6 +44,7 @@
     color: #ddede4;
     font-size: 1em;
     font-weight: 400;
+    margin-bottom: 45px;
     padding: 16px;
 }
 
@@ -71,6 +72,21 @@
 
 .main-logo img{
     margin-bottom: 3px;
+}
+
+.after-header{
+    height: 50px;
+    position: relative;
+}
+
+.after-header-img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
 }
 /* ---- */
 
