--- a/website/about/about.css
+++ b/website/about/about.css
@@ -7,6 +7,9 @@ body {
     padding: 0;
 }
 
+.history {
+    padding-bottom: 64px;
+}
 
 .container-fluid{
     background-color: #ddede4;
@@ -15,8 +18,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: 400;
-    font-size: 2em;
+    font-weight: 300;
+    /* font-size: 2em; */
     text-transform: uppercase;
     letter-spacing: .2em;
     padding: 45px 0 10px;
