--- a/website/contacts/contacts.css
+++ b/website/contacts/contacts.css
@@ -33,11 +33,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: 400;
-    font-size: 2em;
+    font-weight: 500;
+    /* font-size: 2em; */
     text-transform: uppercase;
     letter-spacing: .2em;
-    margin: 45px 0 10px;
+    margin: 45px 0 10px;;
 
   }
 
