--- a/website/nineNews/nineNews.css
+++ b/website/nineNews/nineNews.css
@@ -7,6 +7,10 @@ body {
     padding: 0;
 }
 
+.emty{
+    padding: 32px 0px 32px 0px;
+    background: #ddede4;
+}
 
 /* Naujienos */
 
@@ -17,7 +21,7 @@ body {
 .title-all-news{
     display: flex;
     justify-content: center;
-    justify-items: center;
+    align-items: center;
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: .2em;
