--- a/website/oneNew/oneNew.css
+++ b/website/oneNew/oneNew.css
@@ -13,10 +13,10 @@ body {
 }
 
 /* Naujiena */
-.title-news h1{
+.title-news {
     text-align: left;
     font-weight: 400;
-    font-size: 2em;
+    /* font-size: 2em; */
     text-transform: uppercase;
     letter-spacing: .2em;
     padding: 45px 0 10px;
@@ -59,5 +59,6 @@ body {
 
 .text-news p:last-child{
     margin-bottom: 0px;
+    padding-bottom: 64px;
 }
 /* ---- */
