--- a/website/schedule/schedule.css
+++ b/website/schedule/schedule.css
@@ -11,9 +11,12 @@ body {
     background-color: #ddede4;
 }
 
+.emty{
+    padding: 32px 0px 32px 0px;
+    background: #ddede4;
+}
+
 /* Tvarkaraštis */
-
-
 
 .table th{
     text-align: center;
@@ -33,12 +36,12 @@ table.table{
  background-color: #c5d6cb;
 }
 
-.table-title h1{
+.table-title{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: 400;
-    font-size: 2em;
+    font-weight: 300;
+    /* font-size: 2em; */
     text-transform: uppercase;
     letter-spacing: .2em;
     padding: 45px 0 40px;
