--- a/website/team/team.css
+++ b/website/team/team.css
@@ -16,7 +16,7 @@ body {
     justify-content: center;
     align-items: center;
     font-weight: 400;
-    font-size: 2em;
+    /* font-size: 2em; */
     text-transform: uppercase;
     letter-spacing: .2em;
     padding: 45px 0 10px;
@@ -40,8 +40,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-color: #ddede4;
+    padding-bottom: 49px;
 }
-
 .player{
     display: flex;
     width: 100%;
