--- a/website/headerfooter.css
+++ b/website/headerfooter.css
@@ -44,7 +44,6 @@
     color: #ddede4;
     font-size: 1em;
     font-weight: 400;
-    margin-bottom: 45px;
     padding: 16px;
 }
 
@@ -92,6 +91,16 @@
 
 /* Headeris mobile */
 @media (max-width: 767px) {
+
+    .after-header{
+        display: none;
+    }
+
+    .main-logo img{
+        height: 70px;
+    }
+
+
     .navbar {
         /* flex-direction: column; */
         align-items: flex-start;
