--- a/website/mainPage/main.css
+++ b/website/mainPage/main.css
@@ -186,15 +186,20 @@ body {
 }
 
 .img-section-news{
-    /* height: 100%; */
+    /* height: 100%;
     width: 30%;
-    background-color: #666666;
+    background-color: #666666; */
 }
 
 .img-section-news img{
-    object-fit: cover;
+    /* object-fit: cover;
     height: 100%;
+    width: 100%; */
     width: 100%;
+    height: auto;
+    max-width: 352px;
+    max-height: 184px;
+    object-fit: contain;
 }
 
 .news-info {
@@ -202,13 +207,13 @@ body {
 }
 
 .new-title h4{
-    font-size: 2em;
+    /* font-size: 2em; */
     font-weight: 400;
     line-height: 1.3;
 }
 
 .new-text p{
-    font-size: 1em;
+    /* font-size: 1em; */
     font-weight: 400;
     line-height: 1.6;
 }
@@ -271,7 +276,6 @@ body {
 }
 
 .info-area p{
-    font-size: 1em;
     font-weight: 400;
     line-height: 1.3;
 }
