--- a/website/nineNews/nineNews.css
+++ b/website/nineNews/nineNews.css
@@ -53,15 +53,17 @@ body {
 
 
 .img-news{
-    background-color: grey;
+    /* background-color: grey;
     max-width: 352px;
-    height: 184px;
+    height: 184px; */
 }
 
 .img-news img{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
+    max-width: 352px;
+    max-height: 184px;
+    object-fit: contain;
 }
 
 .date{
