--- a/website/schedule/schedule.css
+++ b/website/schedule/schedule.css
@@ -20,10 +20,12 @@ body {
 
 .table th{
     text-align: center;
+    vertical-align: middle;
 }
 
 .table td{
     text-align: center;
+    vertical-align: middle;
 }
 
 table.table{
@@ -41,7 +43,6 @@ table.table{
     justify-content: center;
     align-items: center;
     font-weight: 300;
-    /* font-size: 2em; */
     text-transform: uppercase;
     letter-spacing: .2em;
     padding: 45px 0 40px;
@@ -53,6 +54,19 @@ table.table{
     height: 30px;
     margin: 0px 10px 0px 10px;
     max-width: 30px;
+}
+
+@media (max-width: 767px) {
+    .table td, .table th{
+        font-size: 12px;        
+    }
+}
+
+@media (max-width: 548px) {
+    .table img{
+        display: none;
+        /* height: 15px; */
+    }
 }
 
 /* ---- */
