--- a/website/team/team.css
+++ b/website/team/team.css
@@ -69,7 +69,7 @@ body {
     justify-content: center;
     align-items: flex-end;
     text-align: center;
-    font-size: 1.2rem;
+    /* font-size: 1.2rem; */
 }
 
 .name p{
@@ -82,7 +82,7 @@ body {
     justify-content: center;
     align-items: start;
     text-align: center;
-    font-size: 1rem;
+    /* font-size: 1rem; */
 }
 
 .about p{
