--- a/website/team/team.css
+++ b/website/team/team.css
@@ -49,6 +49,10 @@ body {
     padding: 0px 15px 15px 0px;
 }
 
+.img-player{
+    background-color: #c5d6cb;
+}
+
 .img-player img{
     width: 100%;
     height: auto;
@@ -59,7 +63,7 @@ body {
 
 .info-player{
     width: 50%;
-    background-color: yellow;
+    background-color: #c5d6cb;
 
 }
 
@@ -73,6 +77,7 @@ body {
 }
 
 .name p{
+    font-weight: 500;
     margin: 0px;
 }
 
@@ -87,4 +92,22 @@ body {
 
 .about p{
     margin: 0px;
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .info-player{
+        width: 266px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .info-player{
+        width: 230px;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    .info-player{
+        width: 294px;
+    }
 }
