--- a/website/mainPage/main.css
+++ b/website/mainPage/main.css
@@ -329,6 +329,14 @@ body {
 /* ---- */
 
 /* Turnyrinė lentelė */
+.table th{
+    vertical-align: middle;
+}
+
+.table td{
+    vertical-align: middle;
+}
+
 table.table{
     margin: 0;
 }
@@ -359,6 +367,7 @@ table td:nth-child(4){
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-weight: 300;
     /* font-size: 2em; */
     text-transform: uppercase;
@@ -484,6 +493,90 @@ table td:nth-child(4){
 .logos-slide img{
     height: 50px;
     margin: 0 40px;
+}
+
+/* ---- */
+
+/* Turnyrinė lentelė */
+
+@media (max-width: 767px) {
+    .table td, .table th{
+        font-size: 12px;        
+    }
+}
+
+@media (max-width: 475px) {
+    .table img{
+        height: 20px;
+    }
+}
+
+@media (min-width: 0px) and (max-width: 382px) {
+    .full{
+        display: none;
+    }
+}
+
+@media (min-width: 383px) and (max-width: 9000px) {
+    .short{
+        display: none;
+    }
+}
+
+@media (max-width: 475px) {
+
+        .table th:nth-child(5){
+        display: none;
+    }
+
+    .table td:nth-child(5){
+        display: none;
+    }
+}
+
+/* ---- */
+
+
+
+
+/* Rėmėjai */
+@media (min-width: 800px) and (max-width: 1000px) {
+
+    .logos-slide img{
+        height: 45px;
+        /* margin: 0 40px; */
+    }
+
+    .logos{
+    padding: 50px 0;
+    }
+
+}
+
+@media (min-width: 700px) and (max-width: 800px) {
+
+    .logos-slide img{
+        height: 40px;
+        /* margin: 0 40px; */
+    }
+
+    .logos{
+    padding: 40px 0;
+    }
+
+}
+
+@media (min-width: 320px) and (max-width: 700px) {
+
+    .logos-slide img{
+        height: 35px;
+        /* margin: 0 40px; */
+    }
+
+    .logos{
+    padding: 30px 0;
+    }
+
 }
 
 /* ---- */
