--- a/website/mainPage/main.css
+++ b/website/mainPage/main.css
@@ -59,7 +59,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1em;
+    /* font-size: 1em; */
     font-weight: 400;
     line-height: 1.6;
 }
@@ -73,6 +73,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    padding-right: 5px;
 }
 
 .result {
@@ -83,7 +84,7 @@ body {
 }
 
 .result p{
-    font-size: 1em;
+    /* font-size: 1em; */
     font-weight: 400;
     line-height: 1.6;
     margin-bottom: 0px;
@@ -94,18 +95,20 @@ body {
     justify-content: flex-start;
     align-items: center;
     width: 40%;
+    padding-right: 5px;
 }
 
 .title-team p{
     margin-bottom: 0px;
-    font-size: 1em;
+    /* font-size: 1em; */
     font-weight: 400;
     line-height: 1.6;
+    padding-top: 2px;
 }
 
 .title-team img{
-    max-height: 50px;
-    max-width: 50px;
+    max-height: 30px;
+    max-width: 30px;
 }
 
 .place{
@@ -115,7 +118,7 @@ body {
 }
 
 .place p{
-    font-size: 1em;
+    /* font-size: 1em; */
     font-weight: 400;
     line-height: 1.6;
     margin-bottom: 0px;
@@ -287,7 +290,6 @@ body {
     text-decoration: none;
     color: #ddede4;
     padding: 10px 35px;
-    border-radius: 4px;
 }
 
 
@@ -319,7 +321,7 @@ body {
 /* Mygtukas rodyti visus žaidėjus */
 .button-all-team a{
     margin-top: 85px;
-    font-size: 1em;
+    /* font-size: 1em; */
     font-weight: 400;
 }
 
@@ -493,6 +495,92 @@ table td:nth-child(4){
 .logos-slide img{
     height: 50px;
     margin: 0 40px;
+}
+
+@media (max-width: 991px){
+    .container-games-and-news{
+        flex-wrap: wrap;
+    }
+}
+
+/* Naujienos */
+
+/* ---- */
+
+/* Artimiausios rungtynės */
+/* Tik tada kai rezultatas yra triženklis */
+@media (min-width: 992px) and (max-width: 1399px){
+    .game-first .result{
+        font-size: 12px;
+    }
+}
+
+@media (min-width: 370px) and (max-width: 391px){
+    .game-first .result{
+        font-size: 15px;
+    }
+}
+
+@media (min-width: 349px) and (max-width: 370px){
+    .game-first .result{
+        font-size: 14px;
+    }
+}
+
+@media (min-width: 327px) and (max-width: 348px){
+    .game-first .result{
+        font-size: 13px;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 326px){
+    .game-first .result{
+        font-size: 12px;
+    }
+}
+
+@media(min-width: 992px) and (max-width: 3000px){
+    .full-soon{
+        display: none;
+    }
+}
+
+@media(min-width: 546px) and (max-width: 991px){
+    .short-soon{
+        display: none;
+    }
+
+}
+
+@media(min-width: 320px) and (max-width: 546px){
+    .full-soon{
+        display: none;
+    }
+
+}
+
+@media (max-width: 991px){
+    .games-all {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media(min-width: 320px) and (max-width: 991px){
+    .title-team img{
+        padding-right: 5px;
+    }
+    
+}
+
+/* ---- */
+
+/* Mygtukas rodyti visus žaidėjus */
+
+@media (max-width: 400px){
+    .button-all-team a{
+        font-size: 13px;
+    }
 }
 
 /* ---- */
