--- a/website/mainPage/main.css
+++ b/website/mainPage/main.css
@@ -122,13 +122,15 @@ body {
     font-weight: 400;
     line-height: 1.6;
     margin-bottom: 0px;
+    margin-top: 16px;
 }
 
 .line{
     background: #840f21;
     width: 100%;
     height: 3px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
+    /* margin-top: 20px; */
 }
 
 .container-games-and-news{
@@ -161,7 +163,11 @@ body {
     /* font-size: 2em; */
     text-transform: uppercase;
     letter-spacing: .2em;
-    margin: 0 0 29px;
+    margin: 46px 0px 46px 0px;
+}
+
+.news-title h1{
+    margin: 0px;
 }
 
 .news-section{
@@ -189,20 +195,21 @@ body {
 }
 
 .img-section-news{
-    /* height: 100%;
-    width: 30%;
-    background-color: #666666; */
+    height: 220px;
+    width: 40%;
+    /* background-color: #666666; */
 }
 
 .img-section-news img{
-    /* object-fit: cover;
+    object-fit: cover;
     height: 100%;
-    width: 100%; */
     width: 100%;
+
+    /* width: 100%;
     height: auto;
     max-width: 352px;
     max-height: 184px;
-    object-fit: contain;
+    object-fit: contain; */
 }
 
 .news-info {
@@ -211,20 +218,24 @@ body {
 
 .new-title h4{
     /* font-size: 2em; */
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.3;
+    margin-bottom: 0px;
+    padding: 10px;
 }
 
 .new-text p{
     /* font-size: 1em; */
     font-weight: 400;
     line-height: 1.6;
+    margin-bottom: 0px;
+    padding: 0px 10px 0px 10px;
 }
 /* ---- */
 
 /* Mygtukas rodyti daugiau naujienų */
 .button-all-news .info-area a{
-    font-size: 1em;
+    /* font-size: 1em; */
     font-weight: 400;
     margin-top: 20px;
 }
@@ -504,6 +515,25 @@ table td:nth-child(4){
 }
 
 /* Naujienos */
+
+@media (min-width: 992px) and (max-width: 1070px){
+    .news-title {
+        margin: 43px 0px 43px 0px;
+    }
+}
+
+@media (min-width: 1071px) and (max-width: 1090px){
+    .news-title {
+        margin: 44px 0px 44px 0px;
+    }
+}
+
+@media (min-width: 1091px) and (max-width: 1120px){
+    .news-title {
+        margin: 45px 0px 45px 0px;
+    }
+}
+
 
 /* ---- */
 
